app/styles/_admin-dashboard.scss
/* ... */
.dashboard__manage-view--pagination .navigaion-link,
.dashboard__manage-view--pagination .navigaion-no {
	font-size: $font-size-small;
	color: $nevada;
	font-weight: $font-weight-medium;
}

.dashboard__manage-view--pagination .navigaion-no {
	padding: 0 5px;
}

.dashboard__manage-view--pagination .inactive {
	font-size: $font-size-small;
/*	color: $celeste;*/
  color: $bombay;
	font-weight: $font-weight-medium;
	cursor: default;
}

.user-help {
	background-color: $seashell;
	position: fixed;
  right: 0;
  left: 0;
  bottom: 40px;
}

.user-help--container {
	position: relative;
	padding: 20px 0;
}

.help-icon {
	span {
		font-size: 115px;
		line-height: 0.5;
	}
	.icon-man-with-circle {
		color: $terracotta;
	}
	.icon-tablet-with-circle {
		color: $blue-portage-light;
	}
}

.user-help__desc--heading {
	font-size: $font-size-base;
	color: $pickled-bluewood;
	display: block;
	font-weight: $font-weight-bold;
}

.user-help__desc--content {
	font-size: $font-size-small;
	color: $trolley-grey;
	font-weight: $font-weight-medium;
}

.user-help--close {
	position: absolute;
	right: 10px;
  top: 5px;
  font-size: 10px;
  cursor: pointer;
}

.user-help-devider {
	border-right: 1px solid $alto-solid;
}

.multi-clinic {
  position: relative;
  span {
    position: absolute;
    padding: 5px;
    cursor: pointer;
    right: 0;
    top: 4px;
  }
}

.selected-box-container {
	height: 30px;
}

.modal {
	background: rgba(0, 0, 0, 0.7) none repeat scroll 0 0;
}

.modal__header {
	background-color: $cyan-blue-light;
	color: white;
	padding: 10px 20px;
	margin-bottom: 0;
	border-top-left-radius: 5px;
	border-top-right-radius: 5px;
	text-transform: none;
  p{
    margin-bottom: 0px;
  }
}

.modal__content {
	padding: 0;
	-webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  border-radius: 5px;
}

.modal__close {
	background: transparent none repeat scroll 0 0;
	border: 0 none;
	color: white;
	cursor: pointer;
	display: inline-block;
	float: right;
	font-size: 24px;
	font-weight: 100;
	line-height: 1;
	margin: -2px 0 0;
	padding: 0;
}

.modal__body {
	padding: 20px;
	background-color: $body-bg;
	border-bottom-left-radius: 5px;
	border-bottom-right-radius: 5px;
}

.modal--message {
	color: $nevada;
}

.modal--custom-btn {
	padding-top: 30px;
}

.parent-list {
  position: relative;
}

.dashboard-page__user-list--parent-list {
  border: 1px solid $bombay;
  position: absolute;
  z-index: 999;
  width: 100%;
  font-weight: normal;
  .parent-detail {
    background-color: $seashell;
    padding-left: 7px;
    &:hover {
      background-color: $alto;
      cursor: pointer;
    }
  }
}

.parent-clinic {
	color: $terracotta;
}

tags-input.ng-invalid .tags {
    box-shadow: none;
}

tags-input .tags .tag-item {
  background: $cyan-blue-light;
  color: $body-bg;
  border: 1px solid $cyan-blue-light;
}

tags-input .tags .tag-item .remove-button {
  color: $body-bg;
}

tags-input .autocomplete .suggestion-item.selected, tags-input .autocomplete .suggestion-item.selected em {
  background-color: $iceberg;
}

.user-detail-info {
  padding: 0px 50px;
  border: 1px solid $celeste;
}

.user-detail-info__data {
  padding-top: 10px;
  padding-bottom: 10px;
  &--key {
    color: #858f9d;
  }
  &--value {
    color: #34455c;
    font-weight: bold;
    font-size: 12px;
  }
}

.admin-user .detail-list {
  padding: 0;
  padding-top: 10px;
  border-bottom: 1px solid $bombay;
  margin-bottom: 10px;
}

.admin-user .detail-list--title {
  padding: 0 10px;
  span {
    font-weight: $font-weight-medium;
    font-size: $font-size-base;
    color: $pickled-bluewood;
  }
}

.admin-user .detail-list--desc {
  padding: 0 10px;
  span {
    font-weight: $font-weight-medium;
    font-size: $font-size-small;
    color: $nevada;
  }
}

.admin-user .detail-list--desc .icon-font {
  position: relative;
  clear: both;
}

.admin-user .detail-list--desc .icon-font .icon-lungs {
  position: absolute;
  font-size: $font-size-icon;
  top: -7px;
  right: 0;
}

.admin-user .detail-list__thead {
  padding: 0;
}

.admin-user .detail-list__thead .detail-list__thead--desc {
  padding: 0;
  color: $cyan-blue-light;
}

.sort-icon {
  display: inline-block;
  cursor: pointer;
  span {
    display: block;
    font-size: 8px;
    color: $cyan-blue-light;
  }
 }

.radio-box-text {
  font-size: $font-size-base;
  font-weight: $font-weight-medium;
  color: $nevada;
  padding-right: 10px;
}





// sdfdsfdsf

.user-detail-info {
  padding: 0px 50px;
  border: 1px solid $celeste;
}

.user-detail-info__data {
  padding-top: 10px;
  padding-bottom: 10px;
  &--key {
    color: #858f9d;
  }
  &--value {
    color: #34455c;
    font-weight: bold;
    font-size: 12px;
  }
}

.admin-user .detail-list {
  padding: 0;
  border-bottom: 1px solid $bombay;
  margin-bottom: 10px;
}


.admin-user .detail-list--desc .active {
  color: $fruit-salad;
}

.admin-user .detail-list--desc .inactive {
  color: $silver-approx;
  cursor: default;
}

.admin-user .detail-list--desc .icon-font {
  position: relative;
  clear: both;
}

.admin-user .detail-list--desc .icon-font .icon-lungs {
  position: absolute;
  font-size: $font-size-icon;
  top: -5px;
}

.dashboard__manage-view--list .icon-font .icon-lungs {
  position: absolute;
  font-size: $font-size-icon;
  top: 2px;
}

.dashboard__manage-view--list .icon-font .icon-lungs.active {
  color: $forest-green;
}

.dashboard__manage-view--list .icon-font .icon-lungs.inactive {
  color: $sunshade;
}

.dashboard__manage-view--header {
  border-bottom: 1px solid #ccc;
  padding: 5px 0;
}

.dashboard__manage-view--header .header--type {
  padding: 0 10px;
  /*color: $cyan-blue-light;*/
  color: $lapis-lazuli;
  font-size: $font-size-small;
  font-weight: 300;
  text-align:center;
}

.dashboard__manage-view--header .text-centered {
  text-align: center;
}
/* ... */

